--- a/package.json
+++ b/package.json
@@ -9,10 +9,11 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "dexie": "^4.0.1",
+    "lucide-react": "^0.553.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "reactflow": "^11.10.0",
-    "dexie": "^4.0.1"
+    "reactflow": "^11.10.0"
   },
   "devDependencies": {
     "@vitejs/plugin-react": "^4.2.0",
